2008-09-16  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwidget.c (_gtk_widget_set,get_pointer_window): don't
	access widget->window if the widget is not realized.

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 551987 – GtkPaned redrawing problem

	* gtk/gtkpaned.c: Remove excess invalidations. Patch by Owen Taylor

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 551987 – GtkPaned redrawing problem

	* gtk/gtkhpaned.c:
	* gtk/gtkvpaned.c: Queue invalidations when the handle is moved 
	due to child changes. Patch by Owen Taylor

2008-09-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 552001 – gtkimcontextsimple.c: variable is declared at middle of
	block

	* gtk/gtkimcontextsimple.c: Fix a C99ism, pointed out by Kazuki
	Iwamoto.

2008-09-13  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkmain.c: Don't use the deprectated
	g_win32_get_package_installation_directory() and
	g_win32_get_package_installation_subdirectory() functions. Use
	g_win32_get_package_installation_directory_of_module()
	instead. Also, don't use the deprecated silly
	G_WIN32_DLLMAIN_FOR_DLL_NAME() macro, but an explicit minimal
	DllMain() that just saves the DLL handle.

2008-09-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 552153 – GtkModules loading with XSettings doesn't work if the
	GTK_MODULES env var isn't set.

	* gtk/gtkmain.c: (do_post_parse_initialization):
	* gtk/gtkmodules.c: (_gtk_modules_init):
	Call _gtk_modules_init () even if gtk_modules_string is NULL, so
	that GtkModules specified with XSettings could be loaded.

2008-09-11  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 536542 – gtk_list_store_set() documentation doesn't say whether
	values are copied.

	* gtk/gtkliststore.c:
	* gtk/gtktreestore.c:
	Explicitly mention in the docs that gtk_[list,tree]_store_set copies
	or keep	a reference of the values.

2008-09-11  Marek Kasik  <mkasik@redhat.com>

	Bug 551378 - Print dialog: should try UDS when fetching PPD for
	localhost
