@@ -1,3 +1,11 @@
+2008-09-17  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 551722 – gtk_widget_set_scroll_adjustments() should check the
+	signal signature
+
+	* gtk/gtkwidget.c (gtk_widget_set_scroll_adjustments): Check the
+	signature of the signal. Patch by Christian Persch
+
 2008-09-16  Michael Natterer  <mitch@imendio.com>
 
 	* gtk/gtkwidget.c (_gtk_widget_set,get_pointer_window): don't
